# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  cmakeDebug.sh
Tables/: AllData.ods  Tablemaker.py  resultsO0.csv  resultsO1.csv  resultsO2.csv  resultsO3.csv  table.txt  tatata.csv
headers/: Benchmark.hpp  EventHandler.hpp  Mandelbrot.hpp  PaletteMaker.hpp  WindowProperties.hpp
src/: Benchmark.cpp  CPUTickTimer.asm  EventHandler.cpp  Mandelbrot.cpp  PaletteMaker.cpp  main.cpp
